// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Working with <GifGrid /> should should work correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn third-title"
  >
    hola mundo
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Working with <GifGrid /> should show items when it is loading images from useFetchGifs  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn third-title"
  >
    hola mundo
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="htpps://algo.jpg"
    />
  </div>
</Fragment>
`;
